[workspace]
members = ["browser", "core", "css-parser", "dom", "html-lexer", "html-parser", "http", "layout"]

[package]
name = "wbe"
version = "0.1.0"
edition = "2021"

[features]
default = ["accesskit"]
accesskit = ["eframe/accesskit"]

[profile.release]
debug = true

[dependencies]
backtrace = "0.3.67"
eframe = { version = "0.21.0", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.21.0"
eyre = "0.6.8"
owning_ref = "0.4.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wbe-browser = { path = "browser" }
wbe-core = { path = "core" }
wbe-css-parser = { path = "css-parser" }
wbe-dom = { path = "dom" }
wbe-html-lexer = { path = "html-lexer" }
wbe-html-parser = { path = "html-parser" }
wbe-http = { path = "http" }
wbe-layout = { path = "layout" }
