[package]
name = "wbe-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
backtrace = "0.3.67"
egui = "0.21.0"
eyre = "0.6.8"
owning_ref = "0.4.1"
tracing = "0.1.37"
wbe-core = { path = "../core" }
wbe-css-parser = { path = "../css-parser" }
wbe-dom = { path = "../dom" }
wbe-html-parser = { path = "../html-parser" }
wbe-http = { path = "../http" }
wbe-layout = { path = "../layout" }
wbe-style = { path = "../style" }
