[package]
name = "wbe-html-lexer"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
nom = "7.1.3"
regex = "1.7.1"

[build-dependencies]
reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
